XML sensor creation

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,6 +5,7 @@ WPI_DIR = /tmp
 
 INC = -I/usr/local/include -I .
 #TRFLAGS = -DTRACECORE433 -DTRACEEVENTMNG -DTRACESINGLETON 
+#TRFLAGS = -DSENSORDEBUG
 NOTUSEDTRFLAGS = -DTRACE_RCOOK -DSENSORDEBUG 
 
 CFLAGS = -c -MMD
